--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
       <section class="section-conteiner-home">
         <div class="background-image">
           <div>
-            <img src="personal_photo.jpg" alt="photo of woman" id="hero-image">
+            <img src="assets/images/personal_photo.jpg" alt="photo of woman" id="hero-image">
           </div>
           <div class="home-text">
             <h1>Hello!<br>I'm Iryna Potapenko</h1>
             <h3>A Freelance Frontend Developer Trainee</h3>
           </div>
           <div class="social-media">
-            <a href="github" class="icon"><img src="github.svg" alt="ginhub logo"></a>
-            <a href="linkedin" class="icon"><img src="linkedin.svg" alt="linkedin logo"></a>
-            <a href="facebook" class="icon"><img src="facebook.svg" alt="facebook logo"></a>
+            <a href="github" class="icon"><img src="assets/images/github.svg" alt="ginhub logo"></a>
+            <a href="linkedin" class="icon"><img src="assets/images/linkedin.svg" alt="linkedin logo"></a>
+            <a href="facebook" class="icon"><img src="assets/images/facebook.svg" alt="facebook logo"></a>
           </div>
         </div>
       </section>
@@ -47,19 +47,19 @@
             <ul>
               <h4 class="subtitle">Services</h4>
               <li class="about-items-list">
-                <img class="image" src="ui.png">
+                <img class="image" src="assets/images/ui.png">
                 <span class="about-items-title">UI Design</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="ux.png">
+                <img class="image" src="assets/images/ux.png">
                 <span class="about-items-title">UX Design</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="app-design.png">
+                <img class="image" src="assets/images/app-design.png">
                 <span class="about-items-title">App Design</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="front.png">
+                <img class="image" src="assets/images/front.png">
                 <span class="about-items-title">Development</span>
               </li>
             </ul>
@@ -68,19 +68,19 @@
             <ul class="about-items" id="right-container">
               <h4 class="subtitle">Tools</h4>
               <li class="about-items-list">
-                <img class="image" src="figma-logo.png">
+                <img class="image" src="assets/images/figma-logo.png">
                 <span class="about-items-title">Figma</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="html-logo.png">
+                <img class="image" src="assets/images/html-logo.png">
                 <span class="about-items-title">HTML</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="css-logo.png">
+                <img class="image" src="assets/images/css-logo.png">
                 <span class="about-items-title">CSS</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="vs-code-logo.png">
+                <img class="image" src="assets/images/vs-code-logo.png">
                 <span class="about-items-title">VS Code</span>
               </li>
             </ul>
@@ -92,11 +92,11 @@
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
-            <a><img class="project-img" src="porfolio-cover.jpg"></a>
+            <a><img class="project-img" src="assets/images/porfolio-cover.jpg"></a>
             <h4 class="subtitle" id="project-title">Portfolio</h4>
           </li>
           <li class="project-item">
-            <a><img class="project-img" src="restaurant-cover.jpg"></a>
+            <a><img class="project-img" src="assets/images/restaurant-cover.jpg"></a>
             <h4 class="subtitle" id="project-title">Restaurant Menu</h4>
           </li>
         </ul>
@@ -105,7 +105,7 @@
       <section class="section-conteiner-contact">
         <h2 id="contact-title">Contact</h2>
         <div class="form-container">
-          <img class="contact-image" src="contact-image.jpg">
+          <img class="contact-image" src="assets/images/contact-image.jpg">
           <div class="contact-form">
         <form>
           <label for="name" class="label-form">Name</label><br>
