--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <div class="header">
         <a href="index.html" class="header-logo">Iryna Potapenko</a>
         <div class="header-right">
-          <a href="" class="nav-item">About</a>
-          <a href="" class="nav-item">Projects</a>
-          <a href="" class="nav-item">Contact</a>
+          <a href="#about" class="nav-item">About</a>
+          <a href="#projects" class="nav-item">Projects</a>
+          <a href="#contact" class="nav-item">Contact</a>
         </div>
       </div>
     </nav>
     <main>
-      <section class="section-conteiner-home">
+      <section class="section-container-home">
         <div class="background-image">
           <div>
             <img src="assets/images/personal_photo.jpg" alt="photo of woman" id="hero-image">
@@ -37,7 +37,7 @@
           </div>
         </div>
       </section>
-      <section class="section-conteiner-about">
+      <section class="section-container-about" id="about">
         <h2>About</h2>
         <p>I am a dedicated Frontend Developer trainee, currently learning HTML and CSS. I focus on creating visually
           appealing and user-friendly web experiences
@@ -88,21 +88,21 @@
 
         </div>
       </section>
-      <section class="section-conteiner-projects">
+      <section class="section-container-projects" id="projects">
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
-            <a><img class="project-img" src="assets/images/porfolio-cover.jpg"></a>
+            <a href="https://github.com/ira-design-front/Portfolio"><img class="project-img" src="assets/images/porfolio-cover.jpg"></a>
             <h4 class="subtitle" id="project-title">Portfolio</h4>
           </li>
           <li class="project-item">
-            <a><img class="project-img" src="assets/images/restaurant-cover.jpg"></a>
+            <a href="https://ira-design-front.github.io/Restaurant-menu/"><img class="project-img" src="assets/images/restaurant-cover.jpg"></a>
             <h4 class="subtitle" id="project-title">Restaurant Menu</h4>
           </li>
         </ul>
       </section>
 
-      <section class="section-conteiner-contact">
+      <section class="section-container-contact" id="contact">
         <h2 id="contact-title">Contact</h2>
         <div class="form-container">
           <img class="contact-image" src="assets/images/contact-image.jpg">
