--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
-            <a href="https://github.com/ira-design-front/Portfolio"><img class="project-img" src="assets/images/porfolio-cover.jpg"></a>
+            <a href="https://github.com/ira-design-front/Portfolio" target="_blank"><img class="project-img" src="assets/images/porfolio-cover.jpg"></a>
             <h4 class="subtitle" id="project-title">Portfolio</h4>
           </li>
           <li class="project-item">
-            <a href="https://ira-design-front.github.io/Restaurant-menu/"><img class="project-img" src="assets/images/restaurant-cover.jpg"></a>
+            <a href="https://ira-design-front.github.io/Restaurant-menu/" target="_blank"><img class="project-img" src="assets/images/restaurant-cover.jpg"></a>
             <h4 class="subtitle" id="project-title">Restaurant Menu</h4>
           </li>
         </ul>
