update-buetify-code

--- a/index.html
+++ b/index.html
@@ -92,11 +92,13 @@
         <h2>Projects</h2>
         <ul class="project-list">
           <li class="project-item">
-            <a href="https://github.com/ira-design-front/Portfolio" target="_blank"><img class="project-img" src="assets/images/porfolio-cover.jpg"></a>
+            <a href="https://github.com/ira-design-front/Portfolio" target="_blank"><img class="project-img"
+                src="assets/images/porfolio-cover.jpg"></a>
             <h4 class="subtitle" id="project-title">Portfolio</h4>
           </li>
           <li class="project-item">
-            <a href="https://ira-design-front.github.io/Restaurant-menu/" target="_blank"><img class="project-img" src="assets/images/restaurant-cover.jpg"></a>
+            <a href="https://ira-design-front.github.io/Restaurant-menu/" target="_blank"><img class="project-img"
+                src="assets/images/restaurant-cover.jpg"></a>
             <h4 class="subtitle" id="project-title">Restaurant Menu</h4>
           </li>
         </ul>
@@ -107,23 +109,24 @@
         <div class="form-container">
           <img class="contact-image" src="assets/images/contact-image.jpg">
           <div class="contact-form">
-        <form>
-          <label for="name" class="label-form">Name</label><br>
-          <input class="form-control" type="text" placeholder="Your Name" id="name" minlength="2" required/>
-          <br><br>
-          <label for="email" class="label-form">Email</label><br>
-          <input class="form-control" type="email" placeholder="Email" id="email" minlength="2" required/>
-          <br><br>
-          <label for="subject" class="label-form">Subject</label><br>
-          <input class="form-control" type="text" placeholder="Subject" id="subject" minlength="2"/>
-          <br><br>
-          <label for="message" class="label-form">Message</label><br>
-          <textarea class="form-control" id="message" placeholder="Write your message here" maxlength="250" rows="4" cols="40" required></textarea>
-          <br><br>
-          <input type="submit" value="Send message" class="primary-button"/>
-          </form>
+            <form>
+              <label for="name" class="label-form">Name</label><br>
+              <input class="form-control" type="text" placeholder="Your Name" id="name" minlength="2" required />
+              <br><br>
+              <label for="email" class="label-form">Email</label><br>
+              <input class="form-control" type="email" placeholder="Email" id="email" minlength="2" required />
+              <br><br>
+              <label for="subject" class="label-form">Subject</label><br>
+              <input class="form-control" type="text" placeholder="Subject" id="subject" minlength="2" />
+              <br><br>
+              <label for="message" class="label-form">Message</label><br>
+              <textarea class="form-control" id="message" placeholder="Write your message here" maxlength="250" rows="4"
+                cols="40" required></textarea>
+              <br><br>
+              <input type="submit" value="Send message" class="primary-button" />
+            </form>
           </div>
-          </div>
+        </div>
       </section>
     </main>
     <footer>
