update-alt-text

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
             <ul>
               <h4 class="subtitle">Services</h4>
               <li class="about-items-list">
-                <img class="image" src="assets/images/ui.png">
+                <img class="image" src="assets/images/ui.png" alt="pencil emoji">
                 <span class="about-items-title">UI Design</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="assets/images/ux.png">
+                <img class="image" src="assets/images/ux.png" alt="magnifying glass tilted leftemoji">
                 <span class="about-items-title">UX Design</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="assets/images/app-design.png">
+                <img class="image" src="assets/images/app-design.png" alt="mobile phone emoji">
                 <span class="about-items-title">App Design</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="assets/images/front.png">
+                <img class="image" src="assets/images/front.png" alt="light bulb emoji">
                 <span class="about-items-title">Development</span>
               </li>
             </ul>
@@ -68,19 +68,19 @@
             <ul class="about-items" id="right-container">
               <h4 class="subtitle">Tools</h4>
               <li class="about-items-list">
-                <img class="image" src="assets/images/figma-logo.png">
+                <img class="image" src="assets/images/figma-logo.png" alt="figma logo">
                 <span class="about-items-title">Figma</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="assets/images/html-logo.png">
+                <img class="image" src="assets/images/html-logo.png" alt="html logo">
                 <span class="about-items-title">HTML</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="assets/images/css-logo.png">
+                <img class="image" src="assets/images/css-logo.png" alt="css logo">
                 <span class="about-items-title">CSS</span>
               </li>
               <li class="about-items-list">
-                <img class="image" src="assets/images/vs-code-logo.png">
+                <img class="image" src="assets/images/vs-code-logo.png" alt="vs-code logo">
                 <span class="about-items-title">VS Code</span>
               </li>
             </ul>
@@ -93,12 +93,12 @@
         <ul class="project-list">
           <li class="project-item">
             <a href="https://github.com/ira-design-front/Portfolio" target="_blank"><img class="project-img"
-                src="assets/images/porfolio-cover.jpg"></a>
+                src="assets/images/porfolio-cover.jpg" alt="A portfolio site on a blue background"></a>
             <h4 class="subtitle" id="project-title">Portfolio</h4>
           </li>
           <li class="project-item">
             <a href="https://ira-design-front.github.io/Restaurant-menu/" target="_blank"><img class="project-img"
-                src="assets/images/restaurant-cover.jpg"></a>
+                src="assets/images/restaurant-cover.jpg" alt="A restaurant menu site on a green background"></a>
             <h4 class="subtitle" id="project-title">Restaurant Menu</h4>
           </li>
         </ul>
@@ -107,7 +107,7 @@
       <section class="section-container-contact" id="contact">
         <h2 id="contact-title">Contact</h2>
         <div class="form-container">
-          <img class="contact-image" src="assets/images/contact-image.jpg">
+          <img class="contact-image" src="assets/images/contact-image.jpg" alt="text let's collaborate together on a gradient background">
           <div class="contact-form">
             <form>
               <label for="name" class="label-form">Name</label><br>
