--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Site</title>
-  <link href="styles.css" rel="stylesheet" />
+  <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,6 +20,7 @@
         </div>
       </div>
     </nav>
+    </header>
     <main>
       <section class="section-container-home">
         <div class="background-image">
@@ -44,8 +45,8 @@
         </p>
         <div class="about-info">
           <div class="services">
+            <h4 class="subtitle">Services</h4>
             <ul>
-              <h4 class="subtitle">Services</h4>
               <li class="about-items-list">
                 <img class="image" src="assets/images/ui.png" alt="pencil emoji">
                 <span class="about-items-title">UI Design</span>
@@ -65,8 +66,9 @@
             </ul>
           </div>
           <div class="services">
-            <ul class="about-items" id="right-container">
-              <h4 class="subtitle">Tools</h4>
+            <div class="right-container">
+            <h4 class="subtitle">Tools</h4>
+            <ul>
               <li class="about-items-list">
                 <img class="image" src="assets/images/figma-logo.png" alt="figma logo">
                 <span class="about-items-title">Figma</span>
@@ -84,6 +86,7 @@
                 <span class="about-items-title">VS Code</span>
               </li>
             </ul>
+            </div>
           </div>
 
         </div>
@@ -94,12 +97,12 @@
           <li class="project-item">
             <a href="https://github.com/ira-design-front/Portfolio" target="_blank"><img class="project-img"
                 src="assets/images/porfolio-cover.jpg" alt="A portfolio site on a blue background"></a>
-            <h4 class="subtitle" id="project-title">Portfolio</h4>
+            <h4 class="subtitle">Portfolio</h4>
           </li>
           <li class="project-item">
             <a href="https://ira-design-front.github.io/Restaurant-menu/" target="_blank"><img class="project-img"
                 src="assets/images/restaurant-cover.jpg" alt="A restaurant menu site on a green background"></a>
-            <h4 class="subtitle" id="project-title">Restaurant Menu</h4>
+            <h4 class="subtitle">Restaurant Menu</h4>
           </li>
         </ul>
       </section>
@@ -111,19 +114,19 @@
           <div class="contact-form">
             <form>
               <label for="name" class="label-form">Name</label><br>
-              <input class="form-control" type="text" placeholder="Your Name" id="name" minlength="2" required />
+              <input class="form-control" type="text" placeholder="Your Name" id="name" minlength="2" required>
               <br><br>
               <label for="email" class="label-form">Email</label><br>
-              <input class="form-control" type="email" placeholder="Email" id="email" minlength="2" required />
+              <input class="form-control" type="email" placeholder="Email" id="email" minlength="2" required>
               <br><br>
               <label for="subject" class="label-form">Subject</label><br>
-              <input class="form-control" type="text" placeholder="Subject" id="subject" minlength="2" />
+              <input class="form-control" type="text" placeholder="Subject" id="subject" minlength="2">
               <br><br>
               <label for="message" class="label-form">Message</label><br>
               <textarea class="form-control" id="message" placeholder="Write your message here" maxlength="250" rows="4"
                 cols="40" required></textarea>
               <br><br>
-              <input type="submit" value="Send message" class="primary-button" />
+              <input type="submit" value="Send message" class="primary-button">
             </form>
           </div>
         </div>
